# innowise_laboratory

lecture_1/: .gitignore  pyproject.toml
lecture_2/: mini_profile_generator.py
lecture_3/: the_student_grade_analyzer.py
lecture_4/MySQL/: _localhost-2025_12_04_01_48_09-dump.sql  pyproject.toml  school_mysql.py  school_mysql.sql
lecture_4/MySQL/school_db/: grades.frm  grades.ibd  students.frm  students.ibd
lecture_4/SQLite/: school.db  school.sql
lecture_5/book_api/: book.db  database.db  database.py  learning_FastApi_using.py  main.py  maon.py  models.py  pyproject.toml  schemas.py
lecture_5/book_api/public/: package-lock.json  package.json
lecture_5/book_api/public/src/: App.vue
lecture_5/book_api/public/src/components/: AuthComponent.vue
lecture_6/: Dockerfile  dockerfile  pyproject.toml
