[project]
name = "lecture-6"
version = "0.1.0"
description = ""
authors = [
    {name = "Sabina Alieva",email = "sabinaalieva966@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.125.0,<0.126.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
