[project]
name = "lecture-4"
version = "0.1.0"
description = ""
authors = [
    {name = "Sabina Alieva",email = "sabinaalieva966@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymysql (>=1.1.2,<2.0.0)",
    "mysql-connector-python (>=9.5.0,<10.0.0)"
]

[database]
server = "localhost" 
port = 3306          
user = root
password = "${DB_PASSWORD}"
dbname = school

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
